--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -19,6 +19,17 @@ jobs:
       matrix:
         ruby:
           - '2.6.3'
+          - '2.6.10'
+          - '2.7.7'
+#          - '3.0.5'
+#             Run bundle exec rake db:migrate
+#             rake aborted!
+#             ArgumentError: wrong number of arguments (given 3, expected 2)
+#          - '3.1.3'
+#          - '3.2.0'
+#            Fetching arclight 0.4.0
+#            Installing arclight 0.4.0
+#            Gem::Ext::BuildError: ERROR: Failed to build gem native extension.
     services:
       db:
         image: postgres
@@ -36,6 +47,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Remove Gemfile.lock
+        run: rm -f Gemfile.lock
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
