--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -45,6 +45,8 @@ jobs:
         run: docker run -d -p 8983:8983 -v $(pwd)/solr/arclight:/umich-arclight:ro  solr:8 solr-precreate umich-arclight-test /umich-arclight
       - name: Yarn Install
         run: yarn install
+      - name: Lint JavaScript
+        run: yarn lint
       - name: Setup Database (db:setup)
         run: bundle exec rake db:setup
       - name: Continuous Integration (standard rb, rubocop, test, spec)
