--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "1234:1234" # RubyMine
       - "26162:26162" # RubyMine
     environment:
+      - FINDING_AID_INGEST=true
       - REDIS_URL=redis://redis:6379
     volumes:
       - .:/opt/app
@@ -26,7 +27,6 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - PGDATA=/var/lib/postgresql/data/db
-
     volumes:
       - db-data:/var/lib/postgresql/data
   solr:
